--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
 	"main": "build.js",
 	"type": "module",
 	"scripts": {
-		"build" : "node build.js",
-		"deploy": "node build.js && gh-pages -d dist"
+		"clear": "rm -rf dist && mkdir dist",
+		"build": "npm run clear && node build.js",
+		"deploy": "npx run clear && node build.js && gh-pages -d dist"
 	},
 	"keywords": [],
 	"author": "",
