--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
-		"handlebars": "^4.7.7"
+		"handlebars": "^4.7.7",
+		"js-yaml": "^4.1.0"
 	},
 	"devDependencies": {
 		"gh-pages": "^5.0.0"
